--- a/Read/ReadMeWiki/01.大型方案/28.音视频通话方案设计.md
+++ b/Read/ReadMeWiki/01.大型方案/28.音视频通话方案设计.md
@@ -80,7 +80,169 @@
 
 
 #### 2.5 TCP消息的设计
+- TCP消息实体设计
+    ``` kotlin
+    object CallConstants {
+        //主叫方发起通话请求
+        const val TYPE_CALLING_PARTY_DIAL_REQ = "apply"
+        //主叫方取消通话请求
+        const val TYPE_CALLING_PARTY_CONTROL_REQ = "apply_control"
+        //被叫方操作请求
+        const val TYPE_CALLED_PARTY_CONTROL_REQ = "call_resp"
+        //被叫方收到通话响应
+        const val TYPE_CALLED_PARTY_CALL_INCOMING_RESP = "call_incoming_resp"
+    
+        //主叫方发起通话响应
+        const val TYPE_CALLING_PARTY_DIAL_RESP = "apply_resp"
+        //主叫方收到对方操作响应
+        const val TYPE_CALLING_PARTY_RECEIVE_CONTROL_RESP = "call_resp"
+        //被叫方收到对方通话响应
+        const val TYPE_CALLED_PARTY_RECEIVE_DIAL_RESP = "call_incoming"
+        //被叫方收到对方取消响应
+        const val TYPE_CALLED_PARTY_RECEIVE_CONTROL_RESP = "apply_control"
+    
+        const val CALL_TYPE_AUDIO = "audio"
+        const val CALL_TYPE_VIDEO = "video"
+        const val STATUS_ONLINE = "online"
+        const val STATUS_OFFLINE = "offline"
+    
+        //接听
+        const val OPERATION_ACCEPT = "accept"
+        //忙碌
+        const val OPERATION_BUSY = "busy"
+        //挂断
+        const val OPERATION_HANGUP = "hangup"
+        //超时
+        const val OPERATION_TIMEOUT = "timeout"
+    }
+    
+    data class Profile(
+        @SerializedName("name") val name: String?,
+        @SerializedName("photo") val photo: String?,
+        @SerializedName("device_name") val deviceName: String?,
+    )
+    
+    interface TcpCallMessage : TcpMessage
+    
+    /**
+     * 主叫方发起通话请求
+     * 场景：App给智能设备发起通话tcp消息
+     */
+    data class CallingPartyDialReq(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLING_PARTY_DIAL_REQ,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long = System.currentTimeMillis(),
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    /**
+     * 主叫方取消通话请求
+     * 场景：App给智能设备发送tcp取消通话
+     */
+    data class CallingPartyControlReq(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLING_PARTY_CONTROL_REQ,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long = System.currentTimeMillis(),
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    /**
+     * 主叫方收到被叫方操作请求。operation类型：
+     * 场景：App收到智能设备的操作
+     * hangup 挂断
+     * accept 接听
+     * busy 忙线
+     * timeout 超时
+     */
+    data class CalledPartyControlReq(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLED_PARTY_CONTROL_REQ,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long = System.currentTimeMillis(),
+        @SerializedName("operation") val operation: String,
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    /**
+     * 被叫方收到通话响应
+     */
+    data class CalledPartyCallIncomingResp(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLED_PARTY_CALL_INCOMING_RESP,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long = System.currentTimeMillis(),
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    
+    /*------------------------------------------------------------------------------*/
+    /*---------------------------收到tcp消息-------------------------------*/
+    /*------------------------------------------------------------------------------*/
+    
+    
+    /**
+     * 主叫方发起通话响应
+     */
+    data class CallingPartyDialResp(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLING_PARTY_DIAL_RESP,
+        @SerializedName("session") val session: String,
+        @SerializedName("status") val status: String,
+        @SerializedName("stamp") val stamp: Long,
+        @SerializedName("channel_name") val channelName: String,
+        @SerializedName("agora_token") val agoraToken: String,
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    /**
+     * 主叫方收到对方操作响应
+     */
+    data class CallingPartyReceiveControlResp(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLING_PARTY_RECEIVE_CONTROL_RESP,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long,
+        @SerializedName("operation") val operation: String,
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    /**
+     * 被叫方收到对方通话响应
+     */
+    data class CalledPartyReceiveDialResp(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLED_PARTY_RECEIVE_DIAL_RESP,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("from_profile") val fromProfile: Profile,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long,
+        @SerializedName("channel_name") val channelName: String,
+        @SerializedName("agora_token") val agoraToken: String,
+        @SerializedName("is_offline_msg") val isOfflineMsg: Int,
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    
+    /**
+     * 被叫方收到对方取消响应
+     */
+    data class CalledPartyReceiveControlResp(
+        @SerializedName("type") val type: String = CallConstants.TYPE_CALLED_PARTY_RECEIVE_CONTROL_RESP,
+        @SerializedName("session") val session: String,
+        @SerializedName("from_id") val fromId: Long,
+        @SerializedName("to_id") val toId: Long,
+        @SerializedName("stamp") val stamp: Long,
+        @SerializedName("call_type") val callType: String = CallConstants.CALL_TYPE_AUDIO,
+    ) : TcpCallMessage
+    ```
+- App给智能设备打电话
 
+- 智能设备给App打电话
 
 
 ### 03.移动端方案实践
@@ -99,6 +261,7 @@
 - 思考两者场景。思考一个问题？什么场景下使用tcp，什么场景下使用push，两者有何区别？
 - App进程杀死：走百度惠推push通道，走的是手机厂商内部逻辑，目前是vivo，oppo，xiaomi，huawei四个大的厂商通道。当收到push后，弹出系统呼叫通知栏。硬伤：抵达消息率比较低
 - App进程存活：走tcp消息，相当于使用tcp来发送和接收消息。然后再处理音视频聊天过程中的业务逻辑。
+
 
 
 #### 3.4 App来电场景设计
