--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -8,7 +8,8 @@
     - 2.1 Socket基础理解
     - 2.2 TCP/IP协议简介
     - 2.3 Socket与Http对比
-    - 2.4 Socket和ServerSocket
+    - 2.4 Socket的使用类型
+    - 2.5 Socket和ServerSocket
 - 03.Socket实践思路
     - 3.1 基础实践步骤
     - 3.2 Socket连接
@@ -41,13 +42,22 @@
 
 
 
+### 00.问题汇总说明
+- Socket概念：
+- Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
+- Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
+- 
+
+
 ### 01.整体概述
 #### 1.1 项目背景说明
 
 
 #### 1.2 遇到问题记录
 
+
 #### 1.3 基础概念介绍
+
 
 #### 1.4 开发设计目标
 
@@ -79,17 +89,80 @@
     - Socket：采用 服务器主动发送数据 的方式。可理解为：是服务器端有需要才进行通信
 
 
-#### 2.4 Socket和ServerSocket
+
+#### 2.4 Socket的使用类型
+- Socket的使用类型主要有两种：
+    - 流套接字（streamsocket） ：基于 TCP协议，采用 流的方式 提供可靠的字节流服务
+    - 数据报套接字(datagramsocket)：基于 UDP协议，采用 数据报文 提供数据打包发送的服务
+- 具体原理图如下：
+    - ![image](https://img-blog.csdnimg.cn/f030fc846dbe4154a4806093d8209b42.png)
+
+
+
+#### 2.5 Socket和ServerSocket
 - Socket 和 ServerSocket 的区别是什么
     - 在 Java 的 SDK 中，socket 的共有两个接口：用于监听客户连接的 ServerSocket 和用于通信的 Socket。
+
 
 
 ### 03.Socket实践思路
 #### 3.1 基础实践步骤
 - Socket可基于TCP或者UDP协议，但TCP更加常用。所以下面的使用步骤 & 实例的Socket将基于TCP协议。
-    - 第一步：
-    - 第二步：
-    - 第三步：
+- 第一步：创建客户端 & 服务器的连接。创建Socket对象 & 指定服务端的IP及端口号 ，判断客户端和服务器是否连接成功。
+    ``` java
+    // 创建Socket对象 & 指定服务端的IP及端口号 
+    Socket socket = new Socket("192.168.1.32", 1989);  
+    // 判断客户端和服务器是否连接成功  
+    socket.isConnected());
+    ```
+- 第二步：客户端 & 服务器 通信。通信包括：客户端 接收服务器的数据 & 发送数据到服务器
+    ``` java
+    <-- 操作1：接收服务器的数据 -->
+    // 步骤1：创建输入流对象InputStream
+    InputStream is = socket.getInputStream() 
+    // 步骤2：创建输入流读取器对象 并传入输入流对象
+    // 该对象作用：获取服务器返回的数据
+    InputStreamReader isr = new InputStreamReader(is);
+    BufferedReader br = new BufferedReader(isr);
+    // 步骤3：通过输入流读取器对象 接收服务器发送过来的数据
+    br.readLine()；
+    
+    
+    <-- 操作2：发送数据 到 服务器 -->                  
+    // 步骤1：从Socket 获得输出流对象OutputStream
+    // 该对象作用：发送数据
+    OutputStream outputStream = socket.getOutputStream(); 
+    // 步骤2：写入需要发送的数据到输出流对象中
+    outputStream.write（（"杨充"+"\n"）.getBytes("utf-8")）；
+    // 特别注意：数据的结尾加上换行符才可让服务器端的readline()停止阻塞
+    // 步骤3：发送数据到服务端 
+    outputStream.flush();  
+    ```
+- 第三步：断开客户端 & 服务器 连接
+    ``` java
+    // 断开 客户端发送到服务器 的连接，即关闭输出流对象OutputStream
+    os.close();
+    // 断开 服务器发送到客户端 的连接，即关闭输入流读取器对象BufferedReader
+    br.close();
+    // 最终关闭整个Socket连接
+    socket.close();
+    ```
+
+
+#### 3.2 Socket连接
+- Socket连接条件
+    - 需要指定ip地址和port端口号。然后调用`socket?.connect(address, timeOut)`
+
+
+
+#### 3.3 Socket中tls连接
+
+
+
+#### 3.4 Socket数据读写
+
+
+#### 3.5 Socket断开连接
 
 
 
@@ -144,6 +217,7 @@
 
 
 
+
 #### 4.4 断开重试的设计
 
 
@@ -156,6 +230,9 @@
     - 客户端发送ping【无业务互动时】，而且还是一个轮训的，主要是保持长链接通畅。
 - 服务端发送pong包
     - server端发送心跳pong包，主要是回应客户端信息。
+- 如何设计长链接
+    - 首先会每隔两秒，客户端就给服务端对方发送一个 ping 包，看看对面在不在，服务端则回执 pong 包表示回应。如果超过 15 秒还没有回复我，那就说明对方掉线了，关闭这边的 TCP 端。
+
 
 
 #### 4.7 数据的封包和解析
