--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -46,7 +46,8 @@
 - Socket概念：
 - Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
 - Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
-- 
+- Socket长链接：如何设置socket保持长链接？如何保持轮训心跳包稳定性并且不会阻塞主线程？如何理解心跳包？
+
 
 
 ### 01.整体概述
@@ -226,12 +227,25 @@
 
 
 #### 4.6 如何设计长链接
+- Socket 长连接的实现背景知识
+    - Socket 长连接，指的是在客户和服务端之间保持一个 socket 连接长时间不断开。
+- 先来思考一个问题
+    - 假定现在有一对已经连接的 socket，在以下情况发生时候，socket 将不再可用。
+    - 1.某一端关闭是 socket（这不是废话吗）。主动关闭的一方会发送 FIN，通知对方要关闭 TCP 连接。在这种情况下，另一端如果去读 socket，将会读到 EoF（End of File）。于是我们知道对方关闭了 socket。
+    - 2.应用程序奔溃。此时 socket 会由内核关闭，结果跟情况1一样。
+    - 3.系统奔溃。这时候系统是来不及发送 FIN 的，因为它已经跪了。此时对方无法得知这一情况。对方在尝试读取数据时，最后会返回 read time out。如果写数据，则是 host unreachable 之类的错误。
+    - 4.电缆被挖断、网线被拔。跟情况3差不多，如果没有对 socket 进行读写，两边都不知道发生了事故。跟情况3不同的是，如果我们把网线接回去，socket 依旧可以正常使用。
+- 如何设计长链接
+    - 要实现一个socket长连接，需要做的就是不断地给对方写数据，然后读取对方的数据，也就是所谓的心跳。只要心还在跳，socket 就是活的。写数据的间隔，需要根据实际的应用需求来决定。
+    - 首先会每隔1分钟，客户端就给服务端对方发送一个 ping 包，看看对面在不在，服务端则回执 pong 包表示回应。如果超过2分钟秒还没有回复我，那就说明对方掉线了，关闭这边的 TCP 端。
 - 轮训发送ping作用
     - 客户端发送ping【无业务互动时】，而且还是一个轮训的，主要是保持长链接通畅。
 - 服务端发送pong包
     - server端发送心跳pong包，主要是回应客户端信息。
-- 如何设计长链接
-    - 首先会每隔两秒，客户端就给服务端对方发送一个 ping 包，看看对面在不在，服务端则回执 pong 包表示回应。如果超过 15 秒还没有回复我，那就说明对方掉线了，关闭这边的 TCP 端。
+- 客户端如何保证消息轮训处理且不会阻塞主线程【场景是：频繁处理消息】
+    - 使用独享的Looper(HandlerThread)。处理异步任务的方式和 Thread + Looper + Handler 方式相同。内部实现了普通线程的 Looper 消息循环，不会阻塞UI县城。
+
+
 
 
 
