--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -31,22 +31,30 @@
     - 5.3 关键流程图
     - 5.4 接口设计图
     - 5.5 模块间依赖关系
-    - 5.6 组件化通信
 - 06.稳定性实践说明
     - 6.1 性能设计
     - 6.2 稳定性设计
     - 6.3 灰度设计
     - 6.4 降级设计
     - 6.5 异常设计
-- 07.项目优化点说明
+- 07.TCP/IP精髓设计
+    - 7.1 协议版本如何升级
+    - 7.2 如何发送不定长数据的数据包
+    - 7.3 如何保证数据有序性
+
 
 
 
 ### 00.问题汇总说明
-- Socket概念：
+- Socket概念：Socket是如何通信的？跟Http有何区别？数据传递性能如何？是否具有安全性？
 - Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
 - Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
 - Socket长链接：如何设置socket保持长链接？如何保持轮训心跳包稳定性并且不会阻塞主线程？如何理解心跳包？
+- Socket读写：如何理解Socket读写数据？如何处理读写异常逻辑？异常之后如何设计重新连接？
+- Socket数据：TcpPacket是如何设计的？消息的长度是不确定的，并且每条消息都有它的边界。我们如何来处理这个边界？
+- Socket数据：如何保证数据有序性？一个任务队列，执行任务，如何保证先取出的任务，执行结果需要先放入结果队列？
+
+
 
 
 
@@ -109,6 +117,12 @@
 ### 03.Socket实践思路
 #### 3.1 基础实践步骤
 - Socket可基于TCP或者UDP协议，但TCP更加常用。所以下面的使用步骤 & 实例的Socket将基于TCP协议。
+    - 第一步：创建客户端 & 服务器的连接。
+    - 第二步：客户端 & 服务器 通信。
+    - 第三步：断开客户端 & 服务器 连接。
+
+
+#### 3.2 Socket连接
 - 第一步：创建客户端 & 服务器的连接。创建Socket对象 & 指定服务端的IP及端口号 ，判断客户端和服务器是否连接成功。
     ``` java
     // 创建Socket对象 & 指定服务端的IP及端口号 
@@ -116,6 +130,15 @@
     // 判断客户端和服务器是否连接成功  
     socket.isConnected());
     ```
+- Socket连接条件
+    - 需要指定ip地址和port端口号。然后调用`socket?.connect(address, timeOut)`
+
+
+#### 3.3 Socket中tls连接
+- 这一步的作用主要是：增加安全性校验。
+
+
+#### 3.4 Socket数据读写
 - 第二步：客户端 & 服务器 通信。通信包括：客户端 接收服务器的数据 & 发送数据到服务器
     ``` java
     <-- 操作1：接收服务器的数据 -->
@@ -128,7 +151,6 @@
     // 步骤3：通过输入流读取器对象 接收服务器发送过来的数据
     br.readLine()；
     
-    
     <-- 操作2：发送数据 到 服务器 -->                  
     // 步骤1：从Socket 获得输出流对象OutputStream
     // 该对象作用：发送数据
@@ -139,6 +161,9 @@
     // 步骤3：发送数据到服务端 
     outputStream.flush();  
     ```
+
+
+#### 3.5 Socket断开连接
 - 第三步：断开客户端 & 服务器 连接
     ``` java
     // 断开 客户端发送到服务器 的连接，即关闭输出流对象OutputStream
@@ -148,23 +173,6 @@
     // 最终关闭整个Socket连接
     socket.close();
     ```
-
-
-#### 3.2 Socket连接
-- Socket连接条件
-    - 需要指定ip地址和port端口号。然后调用`socket?.connect(address, timeOut)`
-
-
-
-#### 3.3 Socket中tls连接
-
-
-
-#### 3.4 Socket数据读写
-
-
-#### 3.5 Socket断开连接
-
 
 
 
@@ -241,7 +249,7 @@
 - 轮训发送ping作用
     - 客户端发送ping【无业务互动时】，而且还是一个轮训的，主要是保持长链接通畅。
 - 服务端发送pong包
-    - server端发送心跳pong包，主要是回应客户端信息。
+    - server端发送心跳pong包，主要是回应客户端信息【回复ping消息】。
 - 客户端如何保证消息轮训处理且不会阻塞主线程【场景是：频繁处理消息】
     - 使用独享的Looper(HandlerThread)。处理异步任务的方式和 Thread + Looper + Handler 方式相同。内部实现了普通线程的 Looper 消息循环，不会阻塞UI县城。
 
@@ -267,13 +275,90 @@
     - version，版本
     - type，类型，用来区分一级消息类型
     - data，数据，一个json对象
-
-
+    ``` kotlin
+    data class TcpPacket(
+        var privateTag: String,
+        val length: Int = 0,
+        val version: Byte = TcpConfig.TCPVersion,
+        val type: Int,
+        val payload: ByteArray
+    ) 
+    ```
 
 
 #### 4.8 一些注意点
 - 实际应用中，在发生异常时，需要关闭 socket，并根据实际业务做一些错误处理工作。
 
+
+### 05.方案设计
+#### 5.1 整体架构图
+
+
+#### 5.2 UML设计图
+
+
+#### 5.3 关键流程图
+
+
+#### 5.4 接口设计图
+
+
+#### 5.5 模块间依赖关系
+
+
+### 06.稳定性实践说明
+#### 6.1 性能设计
+- 关于长链接心跳包优化
+    - 如果想节省资源，在有客户发送数据的时候可以省略 heart beat。目前的做法是发送数据的时候，更新发送ping【移除之前的ping消息，然后发送一条最新的延迟ping消息】
+
+
+
+#### 6.2 稳定性设计
+
+
+
+#### 6.3 灰度设计
+
+
+
+#### 6.4 降级设计
+
+
+
+#### 6.5 异常设计
+- 如何处理读写异常逻辑？
+    - 对读出错时候的处理，可能也存在一些争议。读出错后，我们只是关闭了 socket。socket 需要等到下一次写动作发生时，才会重新连接。
+    - 实际应用中，如果这是一个问题，在读出错后可以直接开始重连。这种情况下，还需要一些额外的同步，避免重复创建 socket。
+
+
+
+### 07.TCP/IP精髓设计
+#### 7.1 协议版本如何升级
+- 当我们对协议版本进行升级的时候，正确识别不同版本的协议对软件的兼容非常重要。那么，我们如何设计协议，才能够为将来的版本升级做准备呢？
+    - 答案可以在 IP 协议找到。IP 协议的第一个字段叫 version，目前使用的是 4 或 6，分别表示 IPv4 和 IPv6。由于这个字段在协议的开头，接收端收到数据后，只要根据第一个字段的值就能够判断这个数据包是 IPv4 还是 IPv6。
+    - 再强调一下，这个字段在两个版本的IP协议都位于第一个字段，为了做兼容处理，对应的这个字段必须位于同一位置。文本协议（如，JSON、HTML）的情况类似。
+
+
+
+#### 7.2 如何发送不定长数据的数据包
+- 举个例子，我们用微信发送一条消息。这条消息的长度是不确定的，并且每条消息都有它的边界。我们如何来处理这个边界呢？
+    - 第一种：IP 的头部有个 header length 和 data length 两个字段。通过添加一个 len 域，我们就能够把数据根据应用逻辑分开。
+    - 第二种：那就是在数据的末尾放置终止符。比方说，想 C 语言的字符串那样，我们在每个数据的末尾放一个 \0 作为终止符，用以标识一条消息的尾部。这个方法带来的问题是，用户的数据也可能存在 \0。此时，我们就需要对用户的数据进行转义。比方说，把用户数据的所有 \0 都变成 \0\0。读消息的过程总，如果遇到 \0\0，那它就代表 \0，如果只有一个 \0，那就是消息尾部。
+- 两种方案优缺点分析
+    - 第一种使用 len 字段的好处是，我们不需要对数据进行转义。读取数据的时候，只要根据 len 字段，一次性把数据都读进来就好，效率会更高一些。
+    - 第二种终止符的方案虽然要求我们对数据进行扫描，但是如果我们可能从任意地方开始读取数据，就需要这个终止符来确定哪里才是消息的开头了。
+    - 当然，这两个方法不是互斥的，可以一起使用。
+
+
+
+#### 7.3 如何保证数据有序性
+- 曾经遇到过的面试题。现在有一个任务队列，多个工作线程从中取出任务并执行，执行结果放到一个结果队列中。先要求，放入结果队列的时候，顺序顺序需要跟从工作队列取出时的一样（也就是说，先取出的任务，执行结果需要先放入结果队列）。
+- 看看 TCP/IP 是怎么处理的。IP 在发送数据的时候，不同数据报到达对端的时间是不确定的，后面发送的数据有可能较先到达。TCP 为了解决这个问题，给所发送数据的每个字节都赋了一个序列号，通过这个序列号，TCP 就能够把数据按原顺序重新组装。
+- 一样，我们也给每个任务赋一个值，根据进入工作队列的顺序依次递增。工作线程完成任务后，在将结果放入结果队列前，先检查要放入对象的写一个序列号是不是跟自己的任务相同，如果不同，这个结果就不能放进去。此时，最简单的做法是等待，知道下一个可以放入队列的结果是自己所执行的那一个。但是，这个线程就没办法继续处理任务了。
+- 更好的方法是，我们维护多一个结果队列的缓冲，这个缓冲里面的数据按序列号从小到大排序。工作线程要将结果放入，有两种可能：
+    - 刚刚完成的任务刚好是下一个，将这个结果放入队列。然后从缓冲的头部开始，将所有可以放入结果队列的数据都放进去。
+    - 所完成的任务不能放入结果队列，这个时候就插入结果队列。然后，跟上一种情况一样，需要检查缓冲。
+    - 如果测试表明，这个结果缓冲的数据不多，那么使用普通的链表就可以。如果数据比较多，可以使用一个最小堆。
 
 
 
