--- a/Read/ReadMeWiki/09.问题分析/05.网络相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/05.网络相关问题汇总.md
@@ -48,6 +48,13 @@
 
 
 ### 07.Socket通信问题
+- Socket概念：Socket是如何通信的？跟Http有何区别？数据传递性能如何？是否具有安全性？
+- Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
+- Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
+- Socket长链接：如何设置socket保持长链接？如何保持轮训心跳包稳定性并且不会阻塞主线程？如何理解心跳包？
+- Socket读写：如何理解Socket读写数据？如何处理读写异常逻辑？异常之后如何设计重新连接？
+- Socket数据：TcpPacket是如何设计的？消息的长度是不确定的，并且每条消息都有它的边界。我们如何来处理这个边界？
+- Socket数据：如何保证数据有序性？一个任务队列，执行任务，如何保证先取出的任务，执行结果需要先放入结果队列？
 
 
 
