--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -16,6 +16,8 @@
     - 3.3 Socket中tls连接
     - 3.4 Socket数据读写
     - 3.5 Socket断开连接
+    - 3.6 Socket完整案例
+    - 3.7 Socket多线程应用
 - 04.通信实践设计
     - 4.1 设计Tcp初始化
     - 4.2 设计Tcp监听
@@ -128,7 +130,7 @@
     // 创建Socket对象 & 指定服务端的IP及端口号 
     Socket socket = new Socket("192.168.1.32", 1989);  
     // 判断客户端和服务器是否连接成功  
-    socket.isConnected());
+    socket.isConnected();
     ```
 - Socket连接条件
     - 需要指定ip地址和port端口号。然后调用`socket?.connect(address, timeOut)`
@@ -173,6 +175,56 @@
     // 最终关闭整个Socket连接
     socket.close();
     ```
+
+
+#### 3.6 Socket完整案例
+- TCP Socket分为Socket和ServerSocket对应着client和server，下面我来用代码实现一个简单的TCP通讯功能：
+- 客户端：首先创建一个Socket和InetSocketAddress，然后通过Socket的connect()方法进行连接，连接成功后可以获取到输出流，通过该输出流就可以向服务端传输数据。
+    ```
+    public class TCPClient {
+        public static void main(String[] args) throws IOException {
+            //1.创建TCP客户端Socket服务
+            Socket client = new Socket();
+            //2.与服务端进行连接
+            InetSocketAddress address = new InetSocketAddress("192.168.31.137",10000);
+            client.connect(address);
+            //3.连接成功后获取客户端Socket输出流
+            OutputStream outputStream = client.getOutputStream();
+            //4.通过输出流往服务端写入数据
+            outputStream.write("hello server".getBytes());
+            //5.关闭流
+            client.close();
+        }
+    }
+    ```
+- 服务端：创建一个服务端Socket并明确端口号，通过accept()方法获取到链接过来的客户端Socket，从客户端Socket中获取输入流，最后由输入流读取客户端传输来的数据。
+    ```
+    public class TCPServer {
+        public static void main(String[] args) throws IOException {
+            //1.创建服务端Socket并明确端口号
+            ServerSocket serverSocket = new ServerSocket(10000);
+            //2.获取到客户端的Socket
+            Socket socket = serverSocket.accept();
+            //3.通过客户端的Socket获取到输入流
+            InputStream inputStream = socket.getInputStream();
+            //4.通过输入流获取到客户端传递的数据
+            BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(inputStream));
+            String line = null;
+            while ((line = bufferedReader.readLine())!=null){
+                System.out.println(line);
+            }
+            //5.关闭流
+            socket.close();
+            serverSocket.close();
+        }
+    }
+    ```
+- 一个服务端是可以同时和多个客户端进行通信的，那么它是如何区分不同客户端呢？
+    - 从上面代码我们可以看到，服务端首先通过accept()获取到客户端Socket，然后通过客户端的Socket获取的流进行通讯，这也让服务端得以区分每个客户端。
+
+
+
+#### 3.7 Socket多线程应用
 
 
 
@@ -359,14 +411,4 @@
     - 刚刚完成的任务刚好是下一个，将这个结果放入队列。然后从缓冲的头部开始，将所有可以放入结果队列的数据都放进去。
     - 所完成的任务不能放入结果队列，这个时候就插入结果队列。然后，跟上一种情况一样，需要检查缓冲。
     - 如果测试表明，这个结果缓冲的数据不多，那么使用普通的链表就可以。如果数据比较多，可以使用一个最小堆。
-
-
-
-
-### 参考链接
-- https://github.com/jiusetian/EasySocket
-- https://github.com/xuuhaoo/OkSocket
-- socket长链接：https://mp.weixin.qq.com/s?__biz=MzIwMTAzMTMxMg==&mid=2649492841&idx=1&sn=751872addc47d2464b8935be17d715d6&chksm=8eec8696b99b0f80b2ebb8e4c346adf177ad206401d83c17aca4047d883b0cc7c0788619df9d&scene=38#wechat_redirect
-- Android网络编程(二)Socket编程：https://www.jianshu.com/p/b04930d2b85e
-
 
