--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -10,7 +10,7 @@
 - 09.Android网络相关
 - 10.Android数据相关问题
 - 11.WebView相关问题
-- 12.Jetpack相关问题
+- 12.JetPack相关问题
 - 13.Android编译问题
 - 14.控件相关问题汇总
 - 15.Android进程IPC
@@ -26,13 +26,15 @@
 - 启动入口：ActivityThread启动入口做了什么？如何创建上下文？为什么要创建上下文。说一下主线程创建时机？
 - 启动流程：说一下application的启动流程，何时创建，什么时候调用onCreate和attachBaseContext方法？
 - 启动顺序：Application中attachBaseContext方法，onCreate方法和ContentProvider中的onCreate方法执行的顺序是什么？
+- Activity启动流程：其中考察最多的类似问题是：从桌面点击一个图标之后，到界面显示，这个过程发生了什么？
 
 
 
 #### 1.1 Activity
-- 说下Activity的生命周期？onStart()和onResume()/onPause()和onStop()的区别？并且这几个方法在那种场景下用到，具体有什么作用？
-- Activity异常生命周期，以及简单说一下这些方法是做什么用的？onSaveInstanceState()方法？何时会调用？onSaveInstanceState()与onPause()的区别？如何避免配置改变时Activity重建？
-- Activity启动模式有哪些？具体说一下使用场景，并绘制进出栈的图形？从非activity中开启activity为什么要添加flag，不添加会出现什么问题？
+- 启动模式：也就是常见的四种启动模式，面试官更喜欢问何时使用他们，也就是使用场景。从非activity中开启activity为什么要添加flag，不添加会出现什么问题？
+- 生命周期：onStart()和onResume()/onPause()和onStop()的区别？并且这几个方法在那种场景下用到，具体有什么作用？
+- 异常生命周期：简单说一下这些方法是做什么用的？onSaveInstanceState()方法？何时会调用？onSaveInstanceState()与onPause()的区别？如何避免配置改变时Activity重建？
+
 - onNewIntent()调用时机？onNewIntent()具体有什么作用？Activity遵循什么设计模式？知道ActivityThread这个类是干什么用的吗？
 - 直接在Activity中创建一个thread跟在service中创建一个thread之间恩区别
 - 由A启动BActivity，A为栈内复用模式，B为标准模式，然后再次启动A或者杀死B，说说A，B的生命周期变化，为什么？
@@ -101,6 +103,9 @@
 
 
 ### 04.Android消息机制
+- Handler工作流程：比如怎么唤醒主线程的，while为啥不会阻塞主线程。同步屏障。涉及到绘制优化、屏幕刷新机制等。
+- 阻塞唤醒原理：这里一般是会问为何loop()方法是死循环却不会占用cpu时间片 or 为何next()方法阻塞却不会卡死。更深一点会问到Linux的IO多路复用epoll原理。
+- 异步消息：说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
 
 
 
@@ -124,7 +129,9 @@
 - 补间动画和属性动画，对于作用于View，两者有什么区别？属性动画是如何改变View的属性的？
 
 
+
 ### 08.Android多媒体问题
+- 图片加载：怎么加载一张超大图？如何计算内存大小？加载大图如何避免OOM，平常是怎么压缩图片的？如何加载超高清大图，局部加载图片了解嘛？
 - 如何给控件的背景设置圆角。做图片圆角的原理是什么，平常有哪些优化操作
 - 从网络加载一个10M的图片，说下注意事项？如何预防OOM？如何计算一个Bitmap占用内存的大小，怎么保证加载Bitmap不产生内存溢出？
 - drawable。对比使用图片和drawable的好处，以及drawable的原理。不同文件展示会一样嘛？同样图片不同文件展示会一样嘛？
@@ -148,6 +155,9 @@
 - Android如何在不压缩的情况下加载高清大图？Android里的内存缓存和磁盘缓存是怎么实现的。
 - android里面的两种序列化方式，如何实现的。Android为什么引入Parcelable？怎么实现的？有没有尝试简化Parcelable的使用？ 
 - 什么是序列化，序列化的对象设置一个serialVersionUID有什么作用？Serializable和Parcelable在性能上那个更加高效，具体结合案例说说……
+- 序列化：serializable和parcelable的原理，以及各自的优缺点、应用场景。
+
+
 
 
 ### 11.WebView相关问题
@@ -157,7 +167,7 @@
 - js调用native方法，它底层的原理是什么？为什么js能调用到Java的方法？webkit提供了这个功能，那它是怎么实现的？js调用native的方法时，是同步的还是异步的?java方法return一个值，js那边能立即拿到么？通过js调用一个java方法，这个java方法都是@onJavaInterface注解过的，这个方法是运行在哪个线程？
 
 
-### 12.Jetpack相关问题
+### 12.JetPack相关问题
 - LiveData，连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
 - LiveData 如何实现双向绑定。View 到 Model，Model 到 View 如何实现绑定？
 - ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？ViewModel 如何绑定不同的页面？ViewModel 是单向绑定还是双向绑定？
@@ -194,6 +204,7 @@
 - 03.进程通信有共享内存，管道，socket，消息队列。他们的原理大概都是什么样的？Binder中使用mmap是什么东西？
 - 04.既然有现有的IPC方式，为什么重新设计一套Binder机制呢。是否用Binder中mmap思想解决你的APP卡顿问题？
 - 05.Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？Binder内核所在的进程是如何找到到Server跟Client进行通信的？
+- Android有哪些跨进程通信，AIDL的代码实现？aidl平常使用有哪些注意点？
 
 
 
