--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -149,6 +149,7 @@
 - 网络请求：https请求如何保证安全性？Charles能抓https请求么？能抓的话那安全性在哪？app如何防止代理抓包？
 
 
+
 ### 10.Android数据相关问题
 - SharePreference性能优化，可以做进程同步吗？SharedPreferences的应用场景，核心原理是什么？SharedPreferences是线程安全的吗？ 
 - SharedPreferences：两种提交方式，缺点，如何解决？主要是commit和apply的区别？
@@ -168,8 +169,8 @@
 
 
 ### 12.JetPack相关问题
-- LiveData，连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
-- LiveData 如何实现双向绑定。View 到 Model，Model 到 View 如何实现绑定？
+- LiveData：连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
+- LiveData：核心设计思想是什么？如何实现双向绑定。View 到 Model，Model 到 View 如何实现绑定？
 - ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？ViewModel 如何绑定不同的页面？ViewModel 是单向绑定还是双向绑定？
 - ViewModel源码实现，它在Activity重启后为什么恢复数据？数据保存在哪里？和onSaveInstanceState有啥区别？
 - ViewModel 为什么存在？那我直接创建个类不可以吗？如何实现数据绑定。ViewModel 如何实现生命周期绑定？
