--- a/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
@@ -18,6 +18,7 @@
 - 04.其他内存优化治理
     - 4.1 代码层内存分析
     - 4.2 如何避免内存抖动
+    - 4.3 即时销毁对象
     - 4.7 ComponentCallback优化
     - 4.8 四种引用优化
     - 4.9 关于log日志
@@ -189,6 +190,15 @@
 
 
 ### 04.其他优化治理
+
+
+
+#### 4.3 即时销毁对象
+- 在组件销毁的时候即时销毁对象
+    - 目前主要是指，将对象释放，也就是设置成null。将元素都置为null，中断强引用与对象之间的关系，让GC的时候能够回收这些对象的内存。
+
+
+
 
 #### 4.2 如何避免内存抖动
 - 内存抖动是由于短时间内有大量对象进出新生区导致的，它伴随着频繁的GC，gc会大量占用ui线程和cpu资源，会导致app整体卡顿。避免发生内存抖动的几点建议：
