--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -16,11 +16,27 @@
 - ANR专题：ANR原理，信息收集，分析，监控，治理。造成ANR原因有哪些，如何解决的？
 - 卡顿专题：卡顿原因，卡顿监控，卡顿治理，
 - 网络专题：网络优化，弱网，监控。如何抓包，放抓包处理等等
-- 内存专题：内存监控，内存治理，OOM，内存如何分配。内存泄漏怎么排查，OOM怎么排查？平常有做过哪些内存优化相关的工作？
+- 内存专题：内存监控，内存治理，内存如何分配。内存泄漏怎么排查，平常有做过哪些内存优化相关的工作？
 - 启动专题：启动优化，页面打开优化，统计耗时。App启动过程有哪些优化？
 - 稳定性专题：稳定性优化，做了那些稳定性工作，hook疑难问题解决？
-- 安全专题：安全防御，挂载，xposed的工作远离
+- 安全专题：安全防御，挂载，xposed的工作原理。如何防抓包
 - 图片专题：图片优化，大图检测，大图加载，图片加载流程，如何减少图片占用内存，图片圆角处理
+- OOM专题：OOM是如何产生，OOM场景，OOM如何优化，OOM排查思路
+- FPS专题：
+- UI优化：
+- 线程专题：
+- IPC专题：
+- 四大组件：
+- 弹窗专题：
+- WMS专题：
+- AMS专题：
+- PMS专题：
+- View专题：
+- 事件专题：
+- 消息机制：
+- 数据专题：
+- 动画专题：
+- 架构设计：
 
 
 
@@ -34,10 +50,13 @@
 - 线程通信：Object的wait和notify。阻塞唤醒，一般会用一个代码或者具体的场景来询问如何保证多线程同步。
 - 类：类加载机制。同时还会问双亲委托机制。
 - 线程与进程的内存关系。如一个线程占多少内存、一个进程可以开多少线程、一个进程占用多少内存等。
+- 线程：
+- 多线程：
+- 线程池：线程池复用问题，如何回收释放，execute和submit有何区别。
 - 内存分布：JMM、运行时数据区、native内存分布。很看对JVM的理解程度。
 - HashMap：1.7，1.8的差异，1.8中什么情况下转换为红黑树，构造函数中参数代表的意思
 - GC过程：（判断对象是否存活，GC算法），垃圾回收机制，GC链路分析过程。
-- 线程池：线程池复用问题，如何回收释放，execute和submit有何区别。
+- 注解：注解场景有哪些，分类，注解为何跟反射一起用，
 
 
 
@@ -70,6 +89,8 @@
 
 ### 05.大搜车项目问题汇总
 - 视频播放器：
+- 视频缓存：
+- 视频优化：
 - 组件化：
 - 网络拦截助手：
 - 组件化通信：
@@ -81,6 +102,8 @@
 - 磁盘工具：
 - 弱网模拟工具：
 - 通用存储方案库：
+- 日志打印：
+
 
 
 
