--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -10,6 +10,7 @@
 - 08.类的加载问题
 - 09.反射使用问题
 - 10.枚举注解问题
+- 11.线程池问题
 - 12.其他知识问题
 
 
@@ -76,31 +77,6 @@
 
 
 ### 04.数据结构问题
-- 什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
-- ArrayList 和 Vector 的区别？ArrayList 和 Vector 的存储空间是如何扩容的？什么是加载因子？
-- ArrayList和LinkedList的区别？为什么说LinkedList 在插入和删除数据时效率更高？有没有在优化的可能？
-- Array 和 ArrayList 有什么区别？什么时候该应 Array 而不是 ArrayList 呢？
-- LinkedList 是单向链表还是双向链表？链表有什么样的特点？插入数据时，ArrayList, LinkedList, Vector谁速度较快？为什么？
-- HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
-- Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别？
-- 一个已经构建好的 TreeSet，怎么完成倒排序？集合Set实现Hash怎么防止碰撞？
-- ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？
-- HashMap的扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
-- 为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
-- HashMap的实现机制，底层数据结构是什么？怎么样HashMap线程安全，HashMap和HashTable有什么区别？HashMap如果Hash冲突了怎么解决？HashMap的put方法的具体流程？
-- 如何保证容器是线程安全的？ConcurrentHashMap 如何实现高效地线程安全？
-- HashMap 的 table的容量如何确定？loadFactor 是什么？ 该容量如何变化？这种变化会带来什么问题？
-- TreeMap 是采用什么树实现的？TreeMap、HashMap、LindedHashMap的区别。
-- 有没有可能 两个不相等的对象有相同的 hashcode？当两个对象 hashcode 相同怎么办？如何获取值对象？
-- 为什么在重写 equals 方法的时候需要重写 hashCode 方法？equals与 hashCode 的异同点在哪里
-- 【fail-fast】什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
-- 【HashMap】HashMap的实现机制，底层数据结构是什么？怎么样HashMap线程安全，HashMap和HashTable有什么区别？HashMap如果Hash冲突了怎么解决？
-- 【List集合】ArrayList，Vector和LinkList的区别，底层分别是怎么实现的，存储空间是如何扩容的？什么是加载因子？
-- 【HashSet】HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
-- 【HashMap】为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
-- 【ConcurrentHashMap】ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？ConcurrentHashMap 如何实现高效地线程安全？
-- 【HashMap】HashMap 的 table的容量如何确定？loadFactor 是什么？ 该容量如何变化？这种变化会带来什么问题？
-- 【数组】在java中，声明一个数组过程中，是如何分配内存的？如何实现数组逆置？如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？
 
 
 
@@ -147,10 +123,6 @@
 - 假如有一个第三方接口，有很多个线程去调用获取数据，现在规定每秒钟最多有 10 个线程同时调用它，如何做到？
 - 你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
 - 多线程有什么要注意的问题？ 如何保证多线程读写文件的安全？ 多线程断点续传原理和如何实现？
-- 线程池的关闭方式有几种，各自的区别是什么？线程池中submit() 和 execute()方法有什么区别？
-- 用过线程池吗？怎么使用的？线程池内的线程如果全部忙，提交一个新的任务，会发生什什么？队列全部塞满了之后，还是忙，再提交会发生什么？
-- 线程池核心线程数一般定义多少，为什么？
-- 说说几种常见的线程池及使用场景？线程池都有哪几种工作队列？怎么理解无界队列和有界队列？
 - 如何控制某个方法允许并发访问线程的个数？多个线程如何同时请求，返回的结果如何等待所有线程数据完成后合成一个数据？
 - 谈谈你对多线程同步机制的理解？如何保证多线程读写文件的安全？
 - Java中用到的线程调度算法是什么？你对线程优先级的理解是什么？什么是线程调度器 (Thread Scheduler) 和时间分片 (Time Slicing)？
@@ -185,11 +157,10 @@
 - 如果对象的引用被置为null，垃圾收集器是否会立即释放对象占用的内存？
 - 【类加载机制】Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
 - 【GC机制】垃圾回收机制的原理是什么？这一块主要是了解是否对java虚拟机有了解……
-- 【四种引用】说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
 - 【加载器】什么是类加载器？类加载器工作机制是什么？类加载器种类？平常是怎么使用ClassLoader加载类的，说一下原理？
 - 什么时候发生类初始化？类初始化后对类的做了什么，加载变量，常量，方法都内存那个位置？
 - 【内存】说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
-
+- 工作内存：工作内存和主内存的关系？它们的作用分别是什么？说一下每个线程工作内存的设计原理？
 
 
 ### 09.反射使用问题
@@ -204,17 +175,35 @@
 
 
 ### 10.枚举注解问题
-- 注解如何获取，反射为何耗性能？了解动态注解吗，说一下Retrfit网络加载框架是如何进行动态注解的？
-- 注解有哪些？写过注解吗？比如分析下butterKnife在bind()时的原理……注解如何实现一个findViewById
+- 注解作用：注解起到什么作用？注解有哪些？写过注解吗？比如分析下butterKnife在bind()时的原理……注解如何实现一个findViewById
+- 注解分类：编译器注解和运行期注解使用场景有哪些？说一下编译期注解实践的场景？运行时注解：retrofit；编译时注解：EventBus
+- 注解实践：注解如何获取，反射为何耗性能？了解动态注解吗，说一下Retrofit网络加载框架是如何进行动态注解的？
+
+
+
+
+### 11.线程池问题
+- 线程池背景：为什么要有线程池？线程池的核心设计思想是什么样的？
+
+
+
+- 线程池的关闭方式有几种，各自的区别是什么？线程池中submit() 和 execute()方法有什么区别？
+- 用过线程池吗？怎么使用的？线程池内的线程如果全部忙，提交一个新的任务，会发生什什么？队列全部塞满了之后，还是忙，再提交会发生什么？
+- 线程池核心线程数一般定义多少，为什么？
+- 说说几种常见的线程池及使用场景？线程池都有哪几种工作队列？怎么理解无界队列和有界队列？
+
 
 
 
 ### 12.其他知识问题
-
-
-
-
-
+- 加解密：加解密有哪些方式？对称加密有哪些，使用场景是什么？非对称加密有哪些，使用场景是什么？如何理解单向加密？
+- MD5：用途是什么？应用场景有哪些？如何增强md5的安全性？
+- Base64：base64是加密算法吗？那些场景使用base64？它的本质是什么？它编码的好处是什么？为何说base64处理的数据有利于多设备传输？ASCII不可见字符有哪些？
+- 四种引用：为何需要四种引用？说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
+- 强引用：如何回收强引用？强引用有何特点？将对象引用赋值为null有何意义？将引用设置成null后jvm什么时候回收对象呢？
+- 软引用：软引用的使用场景？如何判断内存空间是否足够？可能被回收，Jvm是如何处理软引用队列的回收逻辑？注意点有什么？
+- 弱引用：弱引用有何特点？垃圾回收器如何处理弱引用回收策略？软引用和弱引用如何选择？
+- 序列化：transient关键字作用是什么？使用场景是什么？它的实现原理是什么？
 
 
 
