--- a/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
@@ -2,8 +2,16 @@
 #### 目录介绍
 - 01.数组相关问题
 - 02.链表相关问题
-- 03.
-- 11.哈希算法问题
+- 03.栈相关问题
+- 04.队列相关问题
+- 05.树相关问题
+- 06.排序相关问题
+- 07.查找相关问题
+- 08.
+- 09.散列相关问题
+- 10.字符串相关问题
+- 11.递归相关问题
+- 12.哈希算法问题
 - 15.常用数据结构
 
 
@@ -37,13 +45,38 @@
     - BT下载数据如何校验数据的完整性？哈希算法还用到了那些数据校验的场景？
     - 散列函数一般用在那种场景，这种哈希算法对碰撞要求高吗？如何让散列值更加均匀地分布？
     - 哈希冲突如何理解？一般是怎么解决哈希冲突的，结合实际案例说一下，怎么降低哈希冲突？
-- 哈希算法原理
+- 哈希算法问题
     - MD5加密算法的原理是什么？如何增强MD5的安全性？常见MD5破解如何做的？
-
-
+    - Hash的使用场景有哪些？Hash表是如何提高查找速度的？Hash为何会有冲突？如何解决哈希冲突？
+    - HashCode作用是什么？可直接用hashcode判断两个对象是否相等？HashMap中是如何使用HashCode提高去重的逻辑？
 
 
 ### 15.常用数据结构
+- 什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
+- ArrayList 和 Vector 的区别？ArrayList 和 Vector 的存储空间是如何扩容的？什么是加载因子？
+- ArrayList和LinkedList的区别？为什么说LinkedList 在插入和删除数据时效率更高？有没有在优化的可能？
+- Array 和 ArrayList 有什么区别？什么时候该应 Array 而不是 ArrayList 呢？
+- LinkedList 是单向链表还是双向链表？链表有什么样的特点？插入数据时，ArrayList, LinkedList, Vector谁速度较快？为什么？
+- HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
+- Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别？
+- 一个已经构建好的 TreeSet，怎么完成倒排序？集合Set实现Hash怎么防止碰撞？
+- ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？
+- HashMap的扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
+- 为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
+- HashMap的实现机制，底层数据结构是什么？怎么样HashMap线程安全，HashMap和HashTable有什么区别？HashMap如果Hash冲突了怎么解决？HashMap的put方法的具体流程？
+- 如何保证容器是线程安全的？ConcurrentHashMap 如何实现高效地线程安全？
+- HashMap 的 table的容量如何确定？loadFactor 是什么？ 该容量如何变化？这种变化会带来什么问题？
+- TreeMap 是采用什么树实现的？TreeMap、HashMap、LindedHashMap的区别。
+- 有没有可能 两个不相等的对象有相同的 hashcode？当两个对象 hashcode 相同怎么办？如何获取值对象？
+- 为什么在重写 equals 方法的时候需要重写 hashCode 方法？equals与 hashCode 的异同点在哪里
+- 【fail-fast】什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
+- 【HashMap】HashMap的实现机制，底层数据结构是什么？怎么样HashMap线程安全，HashMap和HashTable有什么区别？HashMap如果Hash冲突了怎么解决？
+- 【List集合】ArrayList，Vector和LinkList的区别，底层分别是怎么实现的，存储空间是如何扩容的？什么是加载因子？
+- 【HashSet】HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
+- 【HashMap】为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
+- 【ConcurrentHashMap】ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？ConcurrentHashMap 如何实现高效地线程安全？
+- 【HashMap】HashMap 的 table的容量如何确定？loadFactor 是什么？ 该容量如何变化？这种变化会带来什么问题？
+- 【数组】在java中，声明一个数组过程中，是如何分配内存的？如何实现数组逆置？如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？
 
 
 
