--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -49,14 +49,15 @@
 - 泛型：泛型擦除理解。方法，成员变量，方法体里面局部变量，那些会被擦除。
 - 线程通信：Object的wait和notify。阻塞唤醒，一般会用一个代码或者具体的场景来询问如何保证多线程同步。
 - 类：类加载机制。同时还会问双亲委托机制。
-- 线程与进程的内存关系。如一个线程占多少内存、一个进程可以开多少线程、一个进程占用多少内存等。
+- 线程与进程的内存关系：如一个线程占多少内存、一个进程可以开多少线程、一个进程占用多少内存等。
 - 线程：
-- 多线程：
-- 线程池：线程池复用问题，如何回收释放，execute和submit有何区别。
+- 多线程：多线程并发问题，并发三要素，有哪些锁，锁对应的原理是什么，锁的升级和降级理解，有哪些保证线程安全的方式
+- 线程池：核心设计思想，线程池分类和使用场景，线程池复用问题，execute和submit有何区别，工作队列和阻塞队列如何理解。
 - 内存分布：JMM、运行时数据区、native内存分布。很看对JVM的理解程度。
 - HashMap：1.7，1.8的差异，1.8中什么情况下转换为红黑树，构造函数中参数代表的意思
 - GC过程：（判断对象是否存活，GC算法），垃圾回收机制，GC链路分析过程。
 - 注解：注解场景有哪些，分类，注解为何跟反射一起用，
+
 
 
 
