--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -163,14 +163,14 @@
 - 工作内存：工作内存和主内存的关系？它们的作用分别是什么？说一下每个线程工作内存的设计原理？
 
 
+
+
 ### 09.反射使用问题
-- 什么是反射机制？java反射机制提供了什么功能？在运行时如何调用任一对象的方法？
-- 如何提高反射的效率？反射优缺点有哪些？比如，反射损耗性能，怎么理解？
-- 如何反射获取内部类和调用内部类方法以及反射得到匿名内部类？
-- 如何通过反射创建对象？如何通过反射获取和设置对象私有字段的值？
-- 【反射】如何防止反射序列化攻击单例？反射中有个暴力访问权限方法，这个方法怎么实现的？如何避免发射攻击？
-- 【反射】什么是反射机制？反射机制的优缺点？通过设置setAccessible(true)暴力访问权限有什么危害？
-- 【反射】反射为何损耗性能，从jvm层面说一下你的看法？
+- 反射概念：什么是反射机制？java反射机制提供了什么功能？在运行时如何调用任一对象的方法？反射优缺点有哪些？
+- 反射使用：如何通过反射创建对象？如何反射获取内部类和调用内部类方法以及反射得到匿名内部类？如何通过反射获取和设置对象私有字段的值？
+- 反射：如何防止反射序列化攻击单例？反射中有个暴力访问权限方法，这个方法怎么实现的？如何避免反射攻击？
+- 反射分析：什么是反射机制？反射机制的优缺点？通过设置setAccessible(true)暴力访问权限有什么危害？
+- 反射性能：反射为何损耗性能，从jvm层面说一下你的看法？如何提高反射的效率？
 
 
 
@@ -183,14 +183,12 @@
 
 
 ### 11.线程池问题
-- 线程池背景：为什么要有线程池？线程池的核心设计思想是什么样的？
-
-
-
-- 线程池的关闭方式有几种，各自的区别是什么？线程池中submit() 和 execute()方法有什么区别？
-- 用过线程池吗？怎么使用的？线程池内的线程如果全部忙，提交一个新的任务，会发生什什么？队列全部塞满了之后，还是忙，再提交会发生什么？
-- 线程池核心线程数一般定义多少，为什么？
-- 说说几种常见的线程池及使用场景？线程池都有哪几种工作队列？怎么理解无界队列和有界队列？
+- 线程池设计：为什么要有线程池？线程池的核心设计思想是什么样的？线程池设计包含那些属性？线程池如何设计任务提交？
+- 线程池：线程池的关闭方式有几种，各自的区别是什么？线程池中submit() 和 execute()方法有什么区别？
+- 线程池：线程池内的线程如果全部忙，提交一个新的任务，会发生什什么？队列全部塞满了之后，还是忙，再提交会发生什么？
+- 核心线程：线程池核心线程数一般定义多少，为什么？核心线程可以销毁吗，为什么？
+- 线程池场景：说说几种常见的线程池及使用场景？线程池都有哪几种工作队列？怎么理解无界队列和有界队列？
+- 线程池复用：线程池复用原理是什么？是执行完成后销毁，再新建几个放那；还是始终是那几个线程？
 
 
 
