--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -168,7 +168,9 @@
 ### 09.反射使用问题
 - 反射概念：什么是反射机制？java反射机制提供了什么功能？在运行时如何调用任一对象的方法？反射优缺点有哪些？
 - 反射使用：如何通过反射创建对象？如何反射获取内部类和调用内部类方法以及反射得到匿名内部类？如何通过反射获取和设置对象私有字段的值？
+- 反射使用：new和反射创建对象有何区别？场景分析题：你需要控制学生、老师或家长唱歌行为，可是这些类又是由其他人设计，你只对开始与暂停操作进行控制。那么该如何做呢？
 - 反射：如何防止反射序列化攻击单例？反射中有个暴力访问权限方法，这个方法怎么实现的？如何避免反射攻击？
+- 反射跟泛型：如何通过反射获得泛型的实际类型参数？forName()源码设计思想是什么？getMethod源码设计思想是什么？
 - 反射分析：什么是反射机制？反射机制的优缺点？通过设置setAccessible(true)暴力访问权限有什么危害？
 - 反射性能：反射为何损耗性能，从jvm层面说一下你的看法？如何提高反射的效率？
 
