--- a/Read/ReadJavaWiki/10.反射原理和耗能分析.md
+++ b/Read/ReadJavaWiki/10.反射原理和耗能分析.md
@@ -6,7 +6,17 @@
 - 02.反射实践的运用
     - 2.1 反射创建对象
     - 2.2 反射组成
+    - 2.3 泛型和反射
+    - 2.4 定义接口反射场景
     - 2.5 如何避免反射攻击
+- 03.反射设计考量
+    - 3.1 为何设计暴力访问
+    - 3.2 invoke设计
+    - 3.5 forName设计考量
+- 04.反射性能分析
+    - 4.1 反射开销探索
+    - 4.4 反射调用开销
+    - 4.5 提高反射效率
 
 
 
@@ -55,7 +65,7 @@
     ```
 - 第二种：类.class
     - 1.获取指定类型的Class对象,这里是Person
-    - 2.调用newInstance()方法在让Class对象在内存中创建对应的实例,并且让p引用实例的内存地址
+    - 2.调用newInstance()方法在让Class对象在内存中创建对应的实例，并且让p引用实例的内存地址
     ``` java
     Class<?> cls = Person.class;
     Person p=(Person)cls.newInstance();
@@ -69,6 +79,13 @@
     Class<?> cls= p.getClass();
     Person p2=(Person)cls.newInstance();
     ```
+- 备注一下，cls.newInstance()这种创建都是有默认构造方法。如何创建有参数的对象呢？
+    ```
+    //获得对应的Constructor对象，再通过该Constructor对象的newInstance()方法生成
+    Constructor<?> constructor = cls.getDeclaredConstructor(String.class);//获取指定声明构造函数
+    obj = constructor.newInstance("yc");
+    ```
+
 
 
 
@@ -84,10 +101,149 @@
 
 
 
+#### 2.3 泛型和反射
+
+
+
+#### 2.4 定义接口反射场景
+- 情景分析一下
+    - 例如，你需要来控制学生、老师或者家长的唱歌行为，可是学生、老师和家长这些类又是由其他人来设计的，你只是对开始与暂停操作进行控制。那么该如何做呢？
+- 你可以规定学生类必须实现Sing接口
+    ```
+    public interface Sing {
+        void start();
+    }
+    ```
+- 那么，就可以来进行自己的开发了，将动态加载的对象强转为Sing
+    ```
+    public class Main {
+        public static void main(String[] args) {
+            try {
+                Sing palyer = (Sing) Class.forName("className").newInstance();
+                palyer.start();
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+            
+        }
+    }
+    ```
+- 然后规定他人设计的学生类必须实现Sing接口
+    ```
+    public class Student implements Sing {
+    
+        @Override
+        public void start() {
+            System.out.println("学生唱歌");
+        }
+    }
+    ```
+- 这样，等到得到确切的类名称后，修改main方法的className即可
+    ```
+    public static void main(String[] args) {
+        try {
+            Sing palyer = (Sing) Class.forName("com.czy.demo.Student").newInstance();
+            palyer.start();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        
+    }
+    ```
+
+
 #### 2.5 如何避免反射攻击
-- 第一种：防止反射攻击单例
+- 第一种：使用枚举单例
 - 第二种：将类抽象也无法利用反射
 - 第三种：将类设置成final不可变
+
+
+
+
+### 03.反射设计考量
+#### 3.1 为何设计暴力访问
+- 设置.setAccessible(true)暴力访问权限
+    - 一般情况下，我们并不能对类的私有字段进行操作，利用反射也不例外，但有的时候，例如要序列化的时候，我们又必须有能力去处理这些字段，这时候，我们就需要调用AccessibleObject上的setAccessible()方法来允许这种访问，而由于反射类中的Field，Method和Constructor继承自AccessibleObject，因此，通过在这些类上调用setAccessible()方法，我们可以实现对这些字段的操作。
+    ```
+    Field gradeField = clazz.getDeclaredField("grade");
+    // 如果是 private 或者 package 权限的，一定要赋予其访问权限
+    gradeField.setAccessible(true);
+    
+    Method goMethod = clazz.getDeclaredMethod("getMethod");
+    // 赋予访问权限
+    goMethod.setAccessible(true);
+    ```
+- setAccessible设计思想是什么？
+    - 1
+
+
+
+
+#### 3.5 forName设计考量
+- new和Class.forName("").newInstance()创建对象有何区别？
+    ``` java
+    A a = (A)Class.forName("com.yc.Person").newInstance();
+    A a = new A()；
+    ```
+- 两种创建对象有何区别？
+    - 在初始化一个类，生成一个实例的时候，newInstance()方法和new关键字除了一个是方法，一个是关键字外，最主要有什么区别？
+    - 它们的区别在于创建对象的方式不一样，前者(newInstance)是使用类加载机制，后者(new)是创建一个新类。
+    - 在使用反射的时候，必须确保这个类已经加载并已经连接了。使用new的时候，这个类可以没有被加载，也可以已经被加载。
+- 为什么会有两种创建对象方式？
+    - 主要考虑到软件的可伸缩、可扩展和可重用等软件设计思想。
+    - 从JVM的角度上看：
+        - 我们使用关键字new创建一个类的时候，这个类可以没有被加载。但是使用newInstance()方法的时候，就必须保证：1、这个类已经加载；2、这个类已经连接了。
+        - 而完成上面两个步骤的正是Class的静态方法forName()所完成的，这个静态方法调用了启动类加载器，即加载 java API的那个加载器。
+        - 现在可以看出，newInstance()实际上是把new这个方式分解为两步，即首先调用Class加载方法加载某个类，然后实例化。 这样分步的好处是显而易见的。我们可以在调用class的静态加载方法forName时获得更好的灵活性，提供给了一种降耦的手段。
+    - 区别
+        - 首先，newInstance( )是一个方法，而new是一个关键字；
+        - 其次，Class下的newInstance()的使用有局限，因为它生成对象只能调用无参的构造函数，而使用 new关键字生成对象没有这个限制。
+
+
+
+
+### 04.反射性能分析
+#### 4.1 反射开销探索
+- 分析一下Class.forName,Class.getMethod以及Method.invoke三个操作。
+    - Class.forName会调用本地方法，
+    - Class.getMethod则会遍历该类的共有方法。如果没有匹配到，它还将遍历父类的公有方法。可想而知，这两个操作都非常费时。
+- 值得注意的是，以getMethod为代表的查找方法操作，会返回查找得到结果的一份拷贝。
+    - 因此，我们应当避免在热点代码中使用返回Method数组的getMethods 或者 getDeclaredMethods方法，以减少不必要的堆空间消耗。。
+- 在实践中，我们往往会在应用程序中缓存Class.forName和Class.getMethod的结果。
+
+
+
+
+#### 4.4 反射调用开销
+- 反射效率低，大概有这些原因
+    - Method#invoke 方法会对参数做封装和解封操作。
+    - 需要检查方法可见性。
+    - 需要校验参数。
+    - 反射方法难以内联。
+    - JIT 无法优化。
+- Class.forName
+    - 调用本地方法，耗时。主要好使在哪里？
+- Class.getMethod
+    - 遍历该类的共有方法，匹配不到，遍历父类共有方法，耗时，getMethod会返回得到结果的拷贝，应避免getMethods和getDeclardMethods方法，减少不必要堆空间消耗。
+- Method.invoke
+    - method.invoke(null, i);将invoke的参数改变时，查看其中字节码，发现多了新建Object数据和int类型装箱的指令。
+    - Method.invoke是一个变长参数方法，字节码层面它的最后一个参数是object数组，所以编译器会在方法调用处生成一个数据传入；Object数组不能存储基本类型，所以会自动装箱
+    - 这两者都会带来性能开销，也会占用堆内存，加重gc负担。但是实际上述例子并不会触发gc，因为原本的反射调用被内联，其创建的对象被虚拟机认为“不会逃逸”，此时会将其优化为栈上分配（非堆上分配），不会触发GC。
+    - 需要检查方法可见性，反射时每次调用都必须检查方法的可见性（在 Method.invoke 里）
+    - 需要校验参数，反射时也必须检查每个实际参数与形式参数的类型匹配性（在NativeMethodAccessorImpl.invoke0 里或者生成的 Java 版 MethodAccessor.invoke 里）；
+    - 反射方法难以内联，Method#invoke 就像是个独木桥一样，各处的反射调用都要挤过去，在调用点上收集到的类型信息就会很乱，影响内联程序的判断，使得 Method.invoke() 自身难以被内联到调用方。
+
+
+
+#### 4.5 提高反射效率
+- 缓存重复用到的对象
+    - 利用缓存，在平时项目中用到多次的对象也会进行缓存，谁也不会多次去创建。尤其是在循环时，缓存好实例，就能提高反射的效率，减少耗时。
+- setAccessible(true)
+    - 当遇到私有变量和方法的时候，会用到setAccessible(true)方法关闭安全检查。这个安全检查其实也是耗时的。
+    - 在反射的过程中可以尽量调用setAccessible(true)来关闭安全检查，无论是否是私有的，这样也能提高反射的效率。
+- 其他一些优化措施
+    - 如果调用次数可知可以关闭 Inflation 机制，以及增加内联缓存记录的类型数目。
+
 
 
 
