--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -16,52 +16,31 @@
 
 
 ### 01.基础问题汇总
-- 请说下String与StringBuffer区别，StringBuffer底部如何实现？String类可以被继承吗，为什么？String为什么要设计成不可变的？
-- String类可以new出来吗？String s1 = new String("abc")在内存创建了几个对象？
-- String是不可变的有什么好处？如何分割一个String？什么是字符串池？String是线程安全的吗？为什么我们在使用HashMap的时候总是用String做key？
-- int、char、long各占多少字节数？比如double强转int类型会造成精度损失，为什么？
-- 一个int变量，用volatile修饰，多线程去操作++，线程安全吗？那如何才能保证i++线程安全？不用锁如何保证int自增安全？
-- int,long的取值范围以及BigDecimal，数值越界了如何处理？
-- 介绍一下拆箱和装箱的问题。Java中拆箱和装箱是在基本数据类型和其对应的对象类之间转换时出现的，为什么要这样操作？Integer 对象缓存机制是什么？
-- int 和 Integer 哪个会占用更多的内存？ int 和 Integer 有什么区别？parseInt()函数在什么时候使用到？
-- char 型变量中能不能存贮一个中文汉字，为什么？char是两个字节，是怎么存Utf-8的字符的？
-- 将 int 强制转换为 byte 类型的变量吗？如果该值大于 byte 类型的范围，将会出现什么现象？
-- 什么是泛型，泛型主要有哪些应用场景？如何获取泛型的真实参数类型？具体是怎么操作的？
-- 泛型通配符，上界或者下届包含自己吗？如何理解泛型擦除这个概念？泛型擦除会有哪些影响？
-- 那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？
-- 如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<？>和List<Object>之间的区别是什么？
-- 【整型和字面值】整型数据和字面值有何区别？为何要有字面值？说下装箱和拆箱操作，int和integer分别存储在哪里，valueOf用到什么设计模式，怎么理解缓存池的概念
-- 【String类】请说下String与StringBuffer区别，StringBuffer底部如何实现？String类可以被继承吗，为什么？String为什么要设计成不可变的？
-- 【基本数据】一个int变量，用volatile修饰，多线程去操作++，线程安全吗？那如何才能保证i++线程安全？不用锁如何保证int自增安全？
-- 【泛型】那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？泛型和反射有什么联系？
-- 【泛型】如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<?>和List<Object>之间的区别是什么?
-- 【泛型与反射】通过反射获得泛型的实际类型参数？父类子类使用泛型，其中使用泛型需要注意什么问题？
-- 【二进制】浮点型在二进制中如何表示，为何会出现精度丢失，从存储角度分析一下
+- String类：请说下String与StringBuffer区别，StringBuffer底部如何实现？String类可以被继承吗，为什么？String为什么要设计成不可变的？
+- 基本数据：int、char、long各占多少字节数？比如double强转int类型会造成精度损失，为什么？int,long的取值范围以及BigDecimal，数值越界了如何处理？
+- 拆箱和装箱：介绍一下拆箱和装箱的问题。为什么要这样操作？Integer 对象缓存机制是什么？int 和 Integer 哪个会占用更多的内存？ 
+- char字符：char 型变量中能不能存贮一个中文汉字，为什么？char是两个字节，是怎么存Utf-8的字符的？
+- Byte字节：将 int 强制转换为 byte 类型的变量吗？如果该值大于 byte 类型的范围，将会出现什么现象？
+- 泛型：什么是泛型，应用场景，如何获取泛型的真实参数类型？如何理解泛型通配符？如何理解泛型擦除这个概念？Java中List<？>和List<Object>之间的区别是什么？
+- 整型和字面值：整型数据和字面值有何区别？为何要有字面值？说下装箱和拆箱操作，int和integer分别存储在哪里，valueOf用到什么设计模式，怎么理解缓存池的概念
+- 二进制：浮点型在二进制中如何表示，为何会出现精度丢失，从存储角度分析一下。如何对比浮点型数据是否是相同的？
 
 
 
 ### 02.面向对象问题
-- Java实现多态有哪些必要条件？具体怎么实现？多态的实现原理？多态的作用？
-- 重载（overloading）与重写（override）的区别？重载的方法能否根据返回类型进行区分？继承最大好处？构造器 Constructor 是否可被 Override？
-- Java 中，什么是构造函数？什么是构造函数重载？什么是复制构造函数？
-- 继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
-- 如果类 a 继承类 b，实现接口c，而类 b 和接口 c 中定义了同名变量，请问会出现什么问题？
-- 如何实现对象克隆？深拷贝和浅拷贝区别？深拷贝和浅拷贝如何实现激活机制？
-- 接口和抽象类有什么区别？为什么要这样设计？什么场景选择接口，什么场景选择抽象类？
-- 如何声名一个静态块？静态块有什么好处？静态块和构造方法哪一个先执行？
-- 接口是否可继承(extends)接口？ 抽象类是否可实现(implements)接 口？ 抽象类是否可继承具体类(concrete class)？
-- 抽象类中是否可以有静态的main方法？抽象类是否可实现(implements)接口？抽象类是否可继承具体类(concrete class)？
-- 内部类分为几种？内部类可以引用它的包含类（外部类）的成员吗？ Java 中为什么要引入内部类，还有匿名内部类？匿名内部类是否可以继承其它类，是否可以实现接口？
-- 接口是什么？接口是否可继承接口？为什么要使用接口而不是直接使用具体类？接口有什么优点？
-- 抽象的（abstract）方法是否可同时是静态的（static）,是否可同时是本地方法（native），是否可同时被synchronized修饰？
-- 当一个对象被当作参数传递到一个方法后，此方法可改变这个对象的属性，并可返回变化后的结果，那么这里到底是值传递还是引用传递？
-- 静态属性和静态方法是否可以被继承？是否可以被重写？以及原因？ 静态内部类的设计意图？
-- 【内部类与final】为什么内部类调用的外部变量必须是final修饰的？final的作用是什么，被final修饰的类，可以改变类里面的属性吗？ final, finally, finalize 的区别？
-- 【继承】继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
-- 【抽象类与接口】接口是否可继承(extends)接口? 抽象类是否可实现(implements)接 口? 抽象类是否可继承具体类(concrete class)?
-- 【面向对象】面向对象有哪些特征？继承，封装，多态，可以随意抽一个问细节？接口和抽象类有什么区别？
-- 【思想】说一下面向切面编程的思想，结合一个具体案例说一下
-- 【初始化】说一下什么是静态绑定和动态绑定，作用时机
+- 面向对象：面向对象有哪些特征？继承，封装，多态，可以随意抽一个问细节？接口和抽象类有什么区别？
+- 封装：什么是封装？访问权限修饰符的作用是什么？
+- 继承：继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
+- 多态：Java实现多态有哪些必要条件？具体怎么实现？多态的实现原理？多态的作用？
+- 重载与重写：重载（overloading）与重写（override）的区别？重载的方法能否根据返回类型进行区分？继承最大好处？构造器 Constructor 是否可被 Override？
+- 构造函数：什么是构造函数？什么是构造函数重载？什么是复制构造函数？为何要有构造函数？
+- 案例题：如果类 a 继承类 b，实现接口c，而类 b 和接口 c 中定义了同名变量，请问会出现什么问题？
+- 拷贝：如何实现对象克隆？深拷贝和浅拷贝区别？深拷贝和浅拷贝如何实现激活机制？
+- 抽象类和接口：接口和抽象类有什么区别？为什么要这样设计？什么场景选择接口，什么场景选择抽象类？
+- 静态：静态属性和静态方法是否可以被继承？是否可以被重写？以及原因？ 静态内部类的设计意图？静态块有什么好处？静态块和构造方法哪一个先执行？
+- 内部类：内部类分为几种？内部类可以引用它的包含类（外部类）的成员吗？ Java 中为什么要引入内部类，还有匿名内部类？匿名内部类是否可以继承其它类，是否可以实现接口？
+- 值传递和引用传递：当一个对象被当作参数传递到一个方法后，此方法可改变这个对象的属性，并可返回变化后的结果，那么这里到底是值传递还是引用传递？
+- final：为什么内部类调用的外部变量必须是final修饰的？final的作用是什么，被final修饰的类，可以改变类里面的属性吗？ final, finally, finalize 的区别？
 
 
 
@@ -76,92 +55,66 @@
 
 
 
-### 04.数据结构问题
-
-
-
-
 ### 05.异常处理问题
-- 既然可以用RuntimeException来处理错误，那么你认为为什么Java中还存在检查型异常？
-- Java语言如何进行异常处理，关键字：throws、throw、try、catch、finally分别如何使用？ 
-- 什么是受检查的异常，什么是运行时异常？运行时异常与一般异常有何异同？简述一个你最常见到的runtime exception(运行时异常)？
-- 如果执行finally代码块之前方法返回了结果，或者JVM退出了，finally块中的代码还会执行吗？在什么情况下，finally语句不会执行？
-- try里有return，finally还执行么？那么紧跟在这个try后的finally{}里的code会不会被执行，什么时候被执行，在return前还是后？
-- 当自己创建异常类的时候应该注意什么？异常处理 handle or declare 原则应该如何理解？catch块里别不写代码有什么问题？
-- 【异常】Exception和Error有什么区别？运行时异常与一般异常有什么区别？
-- 【异常捕获】try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的code会不会被执行，什么时候被执行，在 return 前还是后?
-- 【异常性能】try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
+- 异常关键字：Java语言如何进行异常处理，关键字：throws、throw、try、catch、finally分别如何使用？ 
+- 异常分类：什么是受检查的异常，什么是运行时异常？运行时异常与一般异常有何异同？简述一个你最常见到的runtime exception(运行时异常)？
+- finally：如果执行finally代码块之前方法返回了结果，或者JVM退出了，finally块中的代码还会执行吗？在什么情况下，finally语句不会执行？
+- try代码块：try里有return，finally还执行么？那么紧跟在这个try后的finally{}里的code会不会被执行，什么时候被执行，在return前还是后？
+- 异常：Exception和Error有什么区别？运行时异常与一般异常有什么区别？
+- 异常捕获：try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的code会不会被执行，什么时候被执行，在 return 前还是后?
+- 异常性能：try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
+
 
 
 
 ### 06.线程知识问题
-- 线程中start和run方法有什么区别？wait和sleep方法的不同？sleep() 、join（）、yield（）有什么区别？请绘制线程周期图……
-- 用Java手写一个会导致死锁的程序，遇到这种问题解决方案是什么？那些场景用到了死锁机制？
-- 你将如何使用thread dump？你将如何分析Thread dump？
-- 为什么我们调用start()方法时会执行run()方法，为什么我们不能直接调用run()方法？
-- Java 中如何停止一个线程？stop() 和 suspend() 方法为何不推荐使用？如何让正在运行的线程暂停一段时间？
-- 调用start()方法时会执行run()方法，为什么不能直接调用run()方法？你是如何调用 wait（方法的）？使用 if 块还是循环？为什么
-- 说说生产者-消费者问题，如何保证生产者不会在缓冲区满时加入数据，消费者也不会在缓冲区空时消耗数据？
-- 【多线程】多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
-- 【线程】ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
+- 线程生命周期：线程中start和run方法有什么区别？wait和sleep方法的不同？sleep() 、join（）、yield（）有什么区别？请绘制线程周期图……
+- 死锁案例：用Java手写一个会导致死锁的程序，遇到这种问题解决方案是什么？那些场景用到了死锁机制？
+- 线程dump：你将如何使用thread dump？你将如何分析Thread dump？
+- 线程stop：Java 中如何停止一个线程？stop() 和 suspend() 方法为何不推荐使用？如何让正在运行的线程暂停一段时间？
+- 线程start：调用start()方法时会执行run()方法，为什么不能直接调用run()方法？你是如何调用 wait（方法的）？使用 if 块还是循环？为什么
+- 生产者消费者：说说生产者-消费者场景，如何保证生产者不会在缓冲区满时加入数据，消费者也不会在缓冲区空时消耗数据？
+- ThreadLocal：ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
 
 
 
 ### 07.并发知识问题
-- 说一说多线程原理，如果线程过多,会怎样？多线程的优点？同时多线程的缺点？
-- 多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
-- 现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
-- 多个线程异步执行任务，主线程需要等待它们都完成再继续，有哪些实现方式？
-- 在Java中Lock接口比synchronized块的优势是什么？你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
-- 多线程的使用场景？什么情况下会导致线程并发，为什么会产生这种问题，又是如何解决的？
-- volatile这个关键字是怎么解决的？在并发环境中如何确保程序的可见性、顺序性和一致性？
-- 谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？对象锁和类锁是否会互相影响？
-- 两个进程同时要求写或者读，能不能实现？如何防止进程的同步？
-- 设计一个多线程，可以同时读，读的时候不能写，写的时候不能读(读写锁)
-- 当一个线程进入一个对象的 synchronized 方法A 之后，其它线程是否可进入此对象的 synchronized 方法B？使用 synchronized 修饰静态方法和非静态方法有什么区别？
-- 在线程中你怎么处理不可捕捉异常？实际项目中使用多线程举例。你在多线程环境中遇到的常见的问题是什么？你是怎么解决它的
-- 假如有一个第三方接口，有很多个线程去调用获取数据，现在规定每秒钟最多有 10 个线程同时调用它，如何做到？
-- 你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
-- 多线程有什么要注意的问题？ 如何保证多线程读写文件的安全？ 多线程断点续传原理和如何实现？
-- 如何控制某个方法允许并发访问线程的个数？多个线程如何同时请求，返回的结果如何等待所有线程数据完成后合成一个数据？
-- 谈谈你对多线程同步机制的理解？如何保证多线程读写文件的安全？
-- Java中用到的线程调度算法是什么？你对线程优先级的理解是什么？什么是线程调度器 (Thread Scheduler) 和时间分片 (Time Slicing)？
-- newCache 和 newFixed 有什么区别？简述原理。构造函数的各个参数的含义是什么，比如 coreSize, maxsize 等
-- 什么是乐观锁（Optimistic Locking）？如何实现乐观锁？如何避免ABA问题？
-- Java中活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
-- 【锁机制】谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？对象锁和类锁是否会互相影响？
-- 【同步锁】静态同步锁与普通同步锁的区别？具体有哪些使用场景……
-- 【并发】volatile这个关键字是怎么理解的？在并发环境中如何确保程序的可见性、顺序性和一致性？
+- 多线程：多线程为何会有bug？为什么会产生这种问题，又是如何解决的？
+- volatile：volatile这个关键字是怎么理解的？在并发环境中如何确保程序的可见性、顺序性和一致性？
+- Synchronized：谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？有哪些使用场景？说一下锁如何升级和降级。
+- 锁比较：Lock锁比synchronized块的优势是什么？
+- 死锁：活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
+- CAS乐观锁：什么是乐观锁？如何实现乐观锁？如何避免ABA问题？CAS乐观锁是如何实现的？
+- 读写锁：设计一个多线程，可以同时读，读的时候不能写，写的时候不能读(读写锁)。两个进程同时要求写或者读，能不能实现？
+- 线程优先级：Java中用到的线程调度算法是什么？你对线程优先级的理解是什么？什么是线程调度器 (Thread Scheduler) 和时间分片 (Time Slicing)？
+- 线程安全：谈谈你对多线程同步机制的理解？如何保证多线程读写文件的安全，有哪些方式可以做到？
+- 并发请求：如何控制某个方法允许并发访问线程的个数？多个线程如何同时请求，返回的结果如何等待所有线程数据完成后合成一个数据？
+- 案例题：你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
+- 案例题：假如有一个第三方接口，有很多个线程去调用获取数据，现在规定每秒钟最多有 10 个线程同时调用它，如何做到？
+- 案例题：现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
+- 案例题：一个int变量，用volatile修饰，多线程去操作++，线程安全吗？那如何才能保证i++线程安全？不用锁如何保证int自增安全？
+
 
 
 
 ### 08.类的加载问题
-- JAVA类加载器包括几种？它们之间的父子关系是怎么样的？双亲委派机制是什么意思？有什么好处？
-- 如何自定义一个类加载器？你使用过哪些或者你在什么场景下需要一个自定义的类加载器吗？
-- 谈谈对ClassLoader(类加载器)的理解？谈谈对动态加载（OSGI）的理解？
-- 什么时候发生类初始化？遇到new、getstatic、putstatic或invokestatic这4条字节码指令时，会做些什么？
-- 什么是双亲委派模型？为什么使用双亲委托模型？
-- 如何理解栈，堆，本地方法区……？堆内存设置的参数是什么？
-- StackOverFlow异常有没有遇到过？一般你猜测会在什么情况下被触发？如何指定一个线程的堆栈大小？一般你们写多少？
-- 解释内存中的栈(stack)、堆(heap)和方法区(method area)的用法？
-- 简述重排序，内存屏障，happen-before，主内存，工作内存？
-- JVM方法区存储内容 是否会动态扩展 是否会出现内存溢出 出现的原因有哪些。
+- 类加载：Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
+- 内存分配：如何理解栈，堆，本地方法区……？堆内存设置的参数是什么？JVM中哪个参数是用来控制线程的栈堆栈小？
+- 双亲委派：什么是双亲委派模型？为什么使用双亲委托模型？说一下ClassLoader中loadClass方法实现了双亲委派模型的思路？
+- 类加载器：JAVA类加载器包括几种，作用是什么？它们之间的父子关系是怎么样的？如何自定义一个类加载器(那些场景会这样)？
+- 类加载器：ClassLoader原理是什么？类加载器工作机制是什么？loadClass(String name, boolean resolve)第二个参数意义是什么？
+- 类初始化：什么时候发生类初始化？遇到new、getstatic、putstatic或invokestatic这4条字节码指令时，会做些什么？
+- 类初始化：构造器的设计？成员初始化顺序？类名.变量和new对象初始化有何区别，分别是什么情况？
+- 对象：说下对象的内存布局？对象头里面属性有哪些？如何访问对象？对象销毁是如何判断的？
+- 异常：StackOverFlow异常有没有遇到过？一般你猜测会在什么情况下被触发？如何指定一个线程的堆栈大小？一般你们写多少？
+- 工作内存：工作内存和主内存的关系？它们的作用分别是什么？说一下每个线程工作内存的设计原理？简述重排序，内存屏障，happen-before。
+- 内存：说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
+- GC机制：垃圾回收机制的原理是什么？如果对象的引用被置为null，垃圾收集器是否会立即释放对象占用的内存？
+- GC机制：请从四大引用这块说一下GC的回收策略？引用计数法的思路是什么？引用计数法两个对象互相引用如何解决？
+- 垃圾回收：什么情况下触发垃圾回收？如何选择合适的垃圾收集算法？JVM中最大堆大小有没有限制？吞吐量优先选择什么垃圾回收器？响应时间优先呢？
 - JVM内存分哪几个区，每个区的作用是什么？一个对象从创建到销毁都是怎么在这些部分里存活和转移的？
-- JVM中哪个参数是用来控制线程的栈堆栈小？
 - JVM自身会维护缓存吗？是不是在堆中进行对象分配，操作系统的堆还是JVM自己管理堆？什么情况下会发生栈内存溢出？
-- 什么情况下触发垃圾回收？如何选择合适的垃圾收集算法？JVM中最大堆大小有没有限制？吞吐量优先选择什么垃圾回收器？响应时间优先呢？
-- 如何解决内存碎片的问题？如何解决同时存在的对象创建和对象回收问题？
-- Java内存模块分区和GC机制，GC算法有哪些？垃圾回收机制的原理是什么？垃圾回收机制与调用System.gc()区别？
-- 哪些情况下的对象会被垃圾回收机制处理掉？JVM内存区域，开线程影响哪块内存？
-- 请从四大引用这块说一下GC的回收策略？引用计数法的思路是什么？引用计数法两个对象互相引用如何解决？
-- 如果对象的引用被置为null，垃圾收集器是否会立即释放对象占用的内存？
-- 【类加载机制】Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
-- 【GC机制】垃圾回收机制的原理是什么？这一块主要是了解是否对java虚拟机有了解……
-- 【加载器】什么是类加载器？类加载器工作机制是什么？类加载器种类？平常是怎么使用ClassLoader加载类的，说一下原理？
-- 什么时候发生类初始化？类初始化后对类的做了什么，加载变量，常量，方法都内存那个位置？
-- 【内存】说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
-- 工作内存：工作内存和主内存的关系？它们的作用分别是什么？说一下每个线程工作内存的设计原理？
-
+- JVM优化：做过那些jvm优化工作？优化的步骤是怎么进行的？
 
 
 
