--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -45,18 +45,18 @@
 - Lock：必问，AQS的原理最好懂。一般会拿来和synchronize比较。具体原理是怎么实现的？
 - volatile：必问，会拿来和锁比较，他的两个重要作用。更深点会问到cpu缓存一致性协议、以及指令重排的类型与原理。
 - 死锁：一般询问如何解决或者产生的条件。如何排查死锁和解决死锁问题？
-- 反射：反射性能问题如何理解？
+- 反射：反射性能问题如何理解，如何提高反射效率，怎么获取泛型类型，反射使用场景和设计思想。
 - 泛型：泛型擦除理解。方法，成员变量，方法体里面局部变量，那些会被擦除。
 - 线程通信：Object的wait和notify。阻塞唤醒，一般会用一个代码或者具体的场景来询问如何保证多线程同步。
-- 类：类加载机制。同时还会问双亲委托机制。
+- 类：类加载机制。成员初始化顺序。同时还会问双亲委托机制。类加载器原理，使用场景等等。
 - 线程与进程的内存关系：如一个线程占多少内存、一个进程可以开多少线程、一个进程占用多少内存等。
-- 线程：
 - 多线程：多线程并发问题，并发三要素，有哪些锁，锁对应的原理是什么，锁的升级和降级理解，有哪些保证线程安全的方式
 - 线程池：核心设计思想，线程池分类和使用场景，线程池复用问题，execute和submit有何区别，工作队列和阻塞队列如何理解。
-- 内存分布：JMM、运行时数据区、native内存分布。很看对JVM的理解程度。
+- 对象：对象内存布局，对象的创建过程和内存分配情况，如何访问对象，对象如何判断死亡，如何理解方法调用栈帧等。
+- 内存分布：JVM内存模型、运行时数据区、native内存分布。很看对JVM的理解程度。
 - HashMap：1.7，1.8的差异，1.8中什么情况下转换为红黑树，构造函数中参数代表的意思
 - GC过程：（判断对象是否存活，GC算法），垃圾回收机制，GC链路分析过程。
-- 注解：注解场景有哪些，分类，注解为何跟反射一起用，
+- 注解：注解场景有哪些，分类，注解为何跟反射一起用。
 
 
 
